cmake_minimum_required(VERSION 4.1)
project(EjerciciosMatrices)

set(CMAKE_CXX_STANDARD 20)

add_executable(EjerciciosMatrices main.cpp
        MatrizEnteros.cpp
        MatrizEnteros.h
        MatrizOperaciones.cpp
        MatrizOperaciones.h
        MatrizCaracteres.cpp
        MatrizCaracteres.h
        MatrizPuntuaciones.cpp
        MatrizPuntuaciones.h
        MatrizTemperaturas.cpp
        MatrizTemperaturas.h
        MatrizSimetrica.cpp
        MatrizSimetrica.h
        MatrizInventario.cpp
        MatrizInventario.h
        MatrizHorarios.cpp
        MatrizHorarios.h
        MatrizSalaCine.cpp
        MatrizSalaCine.h
        MatrizDinamicaEnt.cpp
        MatrizDinamicaEnt.h
        MatrizDinamicaPers.cpp
        MatrizDinamicaPers.h
        ColeccionPersonas.cpp
        ColeccionPersonas.h
        MatrizDinamicaProducto.cpp
        MatrizDinamicaProducto.h
        MatrizInventarioDinamico.cpp
        MatrizInventarioDinamico.h
        MatrizDinamicaEst.cpp
        MatrizDinamicaEst.h
        MatrizDinamicaGrupo.cpp
        MatrizDinamicaGrupo.h
        MatrizDinamicaLibro.cpp
        MatrizDinamicaLibro.h
        MatrizDinamicaBiblioteca.cpp
        MatrizDinamicaBiblioteca.h
        MatrizDinaPunteAObj.cpp
        MatrizDinaPunteAObj.h
        ColeccionPersonasPunteros.cpp
        ColeccionPersonasPunteros.h
        MatrizDinaPunteAProd.cpp
        MatrizDinaPunteAProd.h
        MatrizDinaPunteAEst.cpp
        MatrizDinaPunteAEst.h
        MatrizDinaPunteALib.cpp
        MatrizDinaPunteALib.h
        SistemaHotel.cpp
        SistemaHotel.h
        MatrizHotel.cpp
        MatrizHotel.h
        SistemaEquipoFut.cpp
        SistemaEquipoFut.h
        EquipoFut.cpp
        EquipoFut.h
        SistemaHorarioClase.cpp
        SistemaHorarioClase.h
        HorarioClase.cpp
        HorarioClase.h
        SistemaEditorial.cpp
        SistemaEditorial.h
        MatrizEditorial.cpp
        MatrizEditorial.h
        SistemaHacienda.cpp
        SistemaHacienda.h
        MatrizHacienda.cpp
        MatrizHacienda.h
        MatrizDeMatrices.cpp
        MatrizDeMatrices.h
        SistemaVotaciones.cpp
        SistemaVotaciones.h
        MatrizUrna.cpp
        MatrizUrna.h
        SistemaAlmacen.cpp
        SistemaAlmacen.h
        MatrizAlmacen.cpp
        MatrizAlmacen.h
        SistemaCalificacionesEsc.cpp
        SistemaCalificacionesEsc.h
        MatrizRegistroAcademico.cpp
        MatrizRegistroAcademico.h
        SistemaBiblioUni.cpp
        SistemaBiblioUni.h
        MatrizBiblio.cpp
        MatrizBiblio.h)
